tests/expectations/compiler/core/algorithms/integers/pedersen64/pedersen64_hash_to_u64.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372117]: Expected an integer of less than 64 bits or a bool but type `address` was found.
    --> compiler-test:29:46
     |
  29 |         let a: u64 = Pedersen64::hash_to_u64(addr_value);
     |                                              ^^^^^^^^^^
Error [ETYC0372117]: Expected an integer of less than 64 bits or a bool but type `field` was found.
    --> compiler-test:31:46
     |
  31 |         let c: u64 = Pedersen64::hash_to_u64(field_value);
     |                                              ^^^^^^^^^^^
Error [ETYC0372117]: Expected an integer of less than 64 bits or a bool but type `group` was found.
    --> compiler-test:32:46
     |
  32 |         let d: u64 = Pedersen64::hash_to_u64(group_value);
     |                                              ^^^^^^^^^^^
Error [ETYC0372117]: Expected an integer of less than 64 bits or a bool but type `scalar` was found.
    --> compiler-test:39:46
     |
  39 |         let o: u64 = Pedersen64::hash_to_u64(scalar_value);
     |                                              ^^^^^^^^^^^^
Error [ETYC0372117]: Expected an integer of less than 64 bits or a bool but type `Foo` was found.
    --> compiler-test:41:46
     |
  41 |         let q: u64 = Pedersen64::hash_to_u64(Foo { a: 1u16, b: 1u16, });
     |                                              ^^^^^^^^^^^^^^^^^^^^^^^^^
"""]
